Refactor: Deprecated 코드 수정
- new URL -> URI.create()